Bug 250056 - New folders not displayed in folder view until relaunch
Summary: New folders not displayed in folder view until relaunch
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-03 18:30 UTC by Sabine Faure
Modified: 2010-09-06 12:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-09-03 18:30:52 UTC
Version:           unspecified
OS:                Linux

Newly created folders are not displayed in the folder view until the user quits and then relaunches Kmail. 

Reproducible: Always

Steps to Reproduce:
- Launch Kmail
- Right click on the Inbox and select 'Add Folder...'
- Enter a name for the folder and click on 'Ok'

Actual Results:  
The new folder is not displayed in Kmail folder view

- Quit Kmail
- Relaunch Kmail

The new folder is now displayed correctly in the folder view

Expected Results:  
The new folder should be displayed in the folder view without the user needing to quit and relaunch Kmail.



The user also needs to quit and relaunch Kmail to display a folder's new name.

Trunk, Svn Rev 1171317
Comment 1 Laurent Montel 2010-09-04 01:25:14 UTC
know bug.
I CC Stephen.
Don't know why it doesn't work, entitytreeview works fine but in kmail we use a derived class from it and it doesn't work.
Don't understand why
Comment 2 Stephen Kelly 2010-09-06 02:38:32 UTC
This is a regressions as a result of commit 1164320. Adding Volker.

It seems that Collections are no longer filtered by content mimetype, as they were before, so those notifications are filtered out. akonadiconsole doesn't have such a mimetype filter, so that receives notifications fine.

I'm also not certain the handling of filtering notifications by resource is correct in the current monitor_p.cpp as that is a final filter. That means that if mimetype stuff was re-added to monitor, you still wouldn't be able to monitor both a mimetype and a resource in the same model, such as if you want to monitor email folders and the search/tags folder.
Comment 3 Volker Krause 2010-09-06 12:01:59 UTC
SVN commit 1172043 by vkrause:

Fix notification filtering in case we are both filtering on resources
and mimetypes, and only the mimetype matches. It worked for items but
not for collections, since we cannot filter them on mimetypes at this
point. Therefore, continue processing if the resource filter did not
match but there is a mimetype filter set, to evaluate the following
filters as well.

BUG: 250056


 M  +8 -2      monitor_p.cpp  
 M  +15 -0     tests/monitorfiltertest.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1172043