Fix notification filtering in case we are both filtering on resources and mimetypes, and only the mimetype matches. It worked for items but not for collections, since we cannot filter them on mimetypes at this point. Therefore, continue processing if the resource filter did not match but there is a mimetype filter set, to evaluate the following filters as well.

BUG: 250056

svn path=/trunk/KDE/kdepimlibs/; revision=1172043